--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -82,7 +82,7 @@
     <view bindtap='goToTheProductList'>
       <image src='../../img/index/spot.png'></image>
       <view class='text'>
-        <text>景点</text>
+        <text>一日游</text>
       </view>
     </view>
     <view bindtap='goToTheProductList'>
@@ -164,7 +164,7 @@
     </view>
     <view class='main_row'>
       <block wx:for="{{coupons}}" wx:key="{{index}}">
-        <view class='main'>
+        <view class='main' data-couponId='{{item.id}}' bindtap='goToTheCouponsDetail'>
           <image class='bg' src='../../img/index/coupon_bg.png'></image>
           <view class='content'>
             <view class='top'>
@@ -187,7 +187,7 @@
             </view>
             <view class='bottom'>
               <view>
-                <text>{{item.description}}</text>
+                <text>{{item.name}}</text>
               </view>
               <view>
                 <text>前往使用></text>
